add missing backticks

--- a/content/posts/2020-08-02-git-hooks.md
+++ b/content/posts/2020-08-02-git-hooks.md
@@ -54,7 +54,7 @@ mkdir .githooks && mv .git/hooks/post-merge .githooks
 
 Now we can set up husky. The npm post-install script for husky checks `package.json` for any declared hooks and automatically installs them in `.git/hooks`. 
 
-In your package.json add:
+In `package.json` add:
 
 ```json
 "husky": {
