--- a/content/posts/2020-08-02-git-hooks.md
+++ b/content/posts/2020-08-02-git-hooks.md
@@ -31,7 +31,9 @@ if changed 'package-lock.json'; then
 fi
 ```
 
-(You could add notifications for other file changes in here, like `Gemfile.lock` or `Podfile.lock`).
+You could add notifications for other file changes in here, like `Gemfile.lock` or `Podfile.lock`.
+
+Credit to [8bitDesigner](https://gist.github.com/8bitDesigner/5869846) for this approach.
 
 ## Test the hook
 Try out the hook by rewinding to a commit where you know `package-lock.json` has changed, let’s say 20 commits ago, then running `git pull` to fast-forward back to now:
@@ -70,4 +72,4 @@ Then install husky:
 npm install --save-dev husky
 ```
 
-Next time someone runs `npm install` with your changes, the hook will be installed in their local `.git` directory. 
+Next time someone runs `npm install` with your changes, the hook will be installed in their local `.git` directory.
